--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,7 @@
 
     <script src="socket.io/socket.io.js"></script>
     <script src="js/socket-custom.js"></script>
+
 </body>
 
 </html>
